Оптимизирую работу с коллекциями и заменяю потоки API на итераторы.